src/julia.h

typedef struct _jl_value_t {
    JL_DATA_TYPE
    struct _jl_value_t *fieldptr[];
} jl_value_t;
typedef struct {
    JL_DATA_TYPE
    void *data;
#ifdef STORE_ARRAY_LEN
    size_t length;
#endif
    union {
        struct {
            /*
              how - allocation style
              0 = data is inlined, or a foreign pointer we don't manage
              1 = julia-allocated buffer that needs to be marked
              2 = malloc-allocated pointer this array object manages
              3 = has a pointer to the Array that owns the data
            */
            unsigned short how:2;
            unsigned short ndims:10;
            unsigned short pooled:1;
            unsigned short ptrarray:1;  // representation is pointer array
            unsigned short isshared:1;  // data is shared by multiple Arrays
            unsigned short isaligned:1; // data allocated with memalign
        };
        unsigned short flags;
    };
    uint16_t elsize;
    uint32_t offset;  // for 1-d only. does not need to get big.
    size_t nrows;
    union {
        // 1d
        size_t maxsize;
        // Nd
        size_t ncols;
    };
    // other dim sizes go here for ndims > 2

    // followed by alignment padding and inline data, or owner pointer
} jl_array_t;
DLLEXPORT int jl_sizeof_ios_t(void);
DLLEXPORT jl_array_t *jl_takebuf_array(ios_t *s);
DLLEXPORT jl_value_t *jl_takebuf_string(ios_t *s);
DLLEXPORT void *jl_takebuf_raw(ios_t *s);
DLLEXPORT jl_value_t *jl_readuntil(ios_t *s, uint8_t delim);